[gd_scene load_steps=2 format=3 uid="uid://yfkiyln0eot1"]

[ext_resource type="Script" path="res://scenes/world/world.gd" id="1_codxv"]

[node name="World" type="Node2D"]
script = ExtResource("1_codxv")

[node name="background" type="ColorRect" parent="."]
offset_right = 802.0
offset_bottom = 606.0
color = Color(0, 0, 0, 1)

[node name="border" type="ColorRect" parent="."]
custom_minimum_size = Vector2(2, 600)
offset_left = 700.0
offset_right = 702.0
offset_bottom = 600.0
color = Color(0.27451, 0.27451, 0.4, 1)

[node name="HUD" type="VBoxContainer" parent="."]
offset_left = 711.0
offset_top = 5.0
offset_right = 797.0
offset_bottom = 166.0

[node name="TimeLabel" type="Label" parent="HUD"]
layout_mode = 2
text = "Time:
"

[node name="TimeCount" type="Label" parent="HUD"]
layout_mode = 2
text = "0
"

[node name="AliveLabel" type="Label" parent="HUD"]
layout_mode = 2
text = "Alive:
"

[node name="AliveCount" type="Label" parent="HUD"]
layout_mode = 2

[node name="ZombiesLabel" type="Label" parent="HUD"]
layout_mode = 2
text = "Zombies:
"

[node name="ZombieCount" type="Label" parent="HUD"]
layout_mode = 2

[node name="Restart" type="Button" parent="HUD"]
layout_mode = 2
text = "Restart
"

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="HUD/Restart" to="." method="_on_restart_pressed"]
